<resources>
    <string name="app_name">FirebaseAuth</string>
    <!-- Activity Titles  -->
    <string name="title_activity_create_account">Create Account</string>
    <!-- Login and Create Account Screen  -->
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="welcome">Android Essentials</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_Resend_Email">Resend</string>
    <string name="button_Reset_password">Reset password</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_phone">Enter your Mobile Number</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="Verification"> To activate your new Account, please check if you have received an e-mail from @NoReply and click the confirmation link contained in the e-mail. Thank You ..!</string>
    <string name="Resend"> If the confirmation e-mail does not arrive or expired ,click on resend e-mail button below. </string>
    <string name="forget_password">   We only need your registred Email id to send you password reset instruction    </string>
    <!-- Instructions and Loading Text -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Your phone is contacting Firebase. This can take up to a minute</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_resetting_Password_with_firebase">attempting to send Password Reset Link on your registred E-mail id...</string>
    <!-- Errors -->
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider:"</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_invalid_phone_not_valid">%s is not a valid Mobile Number</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="error_something_went_wrong">Something went wrong! Please try again.</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
