<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.EmailVerification"
    android:background="@color/background_dark">

    <LinearLayout
        android:id="@+id/linear_layout_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:id="@+id/iv_logo_image"
            android:layout_width="@dimen/logo_image_size"
            android:layout_height="@dimen/logo_image_size"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            android:src="@drawable/logo" />


        <TextView
            android:id="@+id/tv_dont_have_account"
            style="@style/verificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Verification" />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:id="@+id/tv_resend_email"
            style="@style/verificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Resend"
            android:layout_below="@+id/linear_layout_login_activity"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />


    </LinearLayout>
    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/EmailVerification_continue_fab"
        style="@style/FAB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_arrow_right"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@android:color/white"/>

    <Button
        android:id="@+id/login_with_password"

        android:layout_width="match_parent"
        android:layout_height="@dimen/input_field_height"
        android:background="@color/accent"
        android:onClick="OnResendEmailPress"
        android:text="@string/button_Resend_Email"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_below="@+id/linear_layout_login_activity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>