<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.ResetPassword"
    android:background="@color/background_dark">

    <LinearLayout
        android:id="@+id/linear_layout_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:id="@+id/iv_logo_image"
            android:layout_width="@dimen/logo_image_size"
            android:layout_height="@dimen/logo_image_size"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"

            android:src="@drawable/logo" />


        <TextView
            android:id="@+id/tv_forgetPassword"
            style="@style/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget Password?" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_forget_password"
                style="@style/verificationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/lists_title_bottom_margin"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/edit_text_email_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:hint="@string/hint_enter_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/edit_text_password"
                    android:padding="@dimen/edit_text_padding"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textSize="@dimen/login_buttons_text_size" />
            </android.support.design.widget.TextInputLayout>
      </LinearLayout>

        <Button
            android:id="@+id/login_with_password"

            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:background="@color/accent"
            android:onClick="OnResetPasswordPress"
            android:text="@string/button_Reset_password"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            />


    </LinearLayout>



</RelativeLayout>